--- a/site/resources/styles/core/forms/rtl-layout.less
+++ b/site/resources/styles/core/forms/rtl-layout.less
@@ -1,90 +1,67 @@
+@import "../core-values";
+@import "form-values";
+
 .basic-form
 {
-  width: 800px;
   text-align: right;
-}
 
-.basic-form input[type=text],
-.basic-form input[type=password],
-.basic-form input[type=file],
-.basic-form textarea,
-.basic-form select,
-.basic-form .hint,
-.basic-form .group
-{
-  width: 300px;
-}
+  input[type=checkbox],
+  input[type=radio]
+  {
+    float: right;
+  }
 
-.basic-form input[type=checkbox],
-.basic-form input[type=radio]
-{
-  float: right !important;
-}
+  > .form-row,
+  > .group,
+  > .hint
+  {
+    margin-right: @label-area-width;
+  }
 
-.basic-form .two-inputs input,
-.basic-form .two-inputs select,
-.basic-form .two-inputs textarea
-{
-  width: 140px;
-}
+  > p,
+  > div,
+  fieldset > p,
+  fieldset > div
+  {
+    clear: right;
+  }
 
-.basic-form .three-inputs input,
-.basic-form .three-inputs select,
-.basic-form .three-inputs textarea
-{
-  width: 95px;
-}
+  .group,
+  .hint
+  {
+    float: right;
+    clear: right;
+  }
 
-.basic-form .form-row,
-.basic-form .group,
-.basic-form .hint
-{
-  margin-right: 200px;
-}
+  label:first-child
+  {
+    float: right;
+    width: @label-area-width;
+  }
 
-.basic-form > p,
-.basic-form > div,
-.basic-form fieldset > p,
-.basic-form fieldset > div
-{
-  clear: right;
-}
+  .one-input label
+  {
+    margin-left: 0px;
+    margin-right: 18px;
+  }
 
-.basic-form .group,
-.basic-form .hint
-{
-  float: right;
-  clear: right;
-}
+  .help
+  {
+    float: left;
+    width: 180px;
+    height: auto;
+    margin-left: 12px;
+  }
 
-.basic-form label:first-child
-{
-  float: right;
-  width: 200px;
-}
+  fieldset
+  {
+    padding-left: 0px;
+    margin-left: 0px;
+    clear: right;
 
-.basic-form .one-input label
-{
-  margin-left: 0px;
-  margin-right: 18px;
-}
-
-.basic-form .help
-{
-  float: left;
-  width: 180px;
-  height: auto;
-  margin-left: 12px;
-}
-
-.basic-form fieldset
-{
-  padding-left: 0px;
-  margin-left: 0px;
-  clear: right;
-}
-
-.basic-form fieldset fieldset
-{
-  border-left-width: 0px;
+    fieldset
+    {
+      border-left-width: 0px;
+    }
+  }
 }
