--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -10,6 +10,13 @@
   }
 }
 
+.border-box()
+{
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
 .engraved_border(@depth: 1px, @highlight_color: lighten(@background_color, 30%), @shadow_color: darken(@background_color, 10%))
 {
   border: @depth solid;
