--- a/site/resources/styles/core/forms/form-core.css
+++ b/site/resources/styles/core/forms/form-core.css
@@ -1,14 +1,16 @@
 .basic-form fieldset {
-  margin: 0px;
+  margin: 0;
   margin-top: 15px;
+  border: none;
+  padding: 0;
 }
 .basic-form fieldset fieldset .group {
-  margin-left: 0px;
+  margin-left: 0;
 }
 .basic-form input,
 .basic-form textarea,
 .basic-form select {
-  margin-left: 0px;
+  margin-left: 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -16,20 +18,24 @@
 .basic-form input[type=checkbox],
 .basic-form input[type=radio] {
   vertical-align: baseline;
-  margin-left: 0px;
+  margin-left: 0;
   margin-top: .5em;
 }
 .basic-form .help p:first-child {
-  margin-top: 0px;
+  margin-top: 0;
 }
 .basic-form .help p:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 .basic-form .hint,
 .basic-form > .form-row,
 .basic-form fieldset .hint,
 .basic-form fieldset > .form-row {
   display: block;
+}
+.basic-form .form-row {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .basic-form .group {
   display: block;
