--- a/site/resources/styles/core/forms/ltr-left.css
+++ b/site/resources/styles/core/forms/ltr-left.css
@@ -1,20 +1,6 @@
 .basic-form fieldset .hint,
 .basic-form fieldset .group,
-.basic-form fieldset fieldset {
-  margin-left: 190px;
-}
+.basic-form fieldset fieldset,
 .basic-form fieldset label:first-child {
-  width: 190px;
-}
-.basic-form fieldset fieldset {
-  border-left-width: 0px;
-  border-right-width: 0px;
-  border-bottom-width: 0px;
-}
-.basic-form fieldset {
-  /* The border is one pixel, so this makes 10 pixels in all. */
-  padding-left: 9px;
-}
-.basic-form fieldset fieldset {
-  padding-left: 0;
+  margin-left: 190px;
 }
