--- a/site/resources/styles/core/forms/theme.less
+++ b/site/resources/styles/core/forms/theme.less
@@ -9,7 +9,7 @@
     legend
     {
       padding: @standard_border_radius / 2 @standard_border_radius;
-      margin-left: -@standard_border_radius - @hairline_border_width;
+      margin-left: -@standard_border_radius;
     }
   }
 
