--- a/site/resources/styles/core/forms/top-layout.less
+++ b/site/resources/styles/core/forms/top-layout.less
@@ -1,30 +1,13 @@
 .basic-form.top
 {
-  width: 600px;
-
-  input[type=text],
-  input[type=password],
-  input[type=file],
-  textarea,
-  select,
-  .hint,
-  .group
+  .two-inputs
   {
-    width: 300px;
-  }
-
-  .two-inputs input,
-  .two-inputs select,
-  .two-inputs textarea
-  {
-    width: 145px;
-  }
-
-  .three-inputs input,
-  .three-inputs select,
-  .three-inputs textarea
-  {
-    width: 95px;
+    input,
+    select,
+    textarea
+    {
+      width: 50%;
+    }
   }
 
   label:first-child
@@ -44,10 +27,10 @@
   {
     padding-right: 0px;
     margin-right: 0px;
-  }
 
-  fieldset fieldset
-  {
-    border-right-width: 0px;
+    fieldset
+    {
+      border-right-width: 0px;
+    }
   }
 }
