--- a/site/resources/styles/core/forms/ltr-layout.less
+++ b/site/resources/styles/core/forms/ltr-layout.less
@@ -39,7 +39,7 @@
 
   .form-row
   {
-    button:first-child
+    .button:first-child
     {
       margin-left: -@standard_border_radius - @hairline_border_width;
     }
