Fixed button rendering and cleaned up a lot of custom forms

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -1,8 +1,12 @@
 @small_spacing: 5px;
 @standard_spacing: @small_spacing * 3;
 @cell_spacing: 2px;
+@button_spacing: @small_spacing * 2;
 
 @standard_border_radius: 4px;
+
+@minimum_button_width: 2em;
+@minimum_button_height: 2em;
 
 @text_flow_line_height: 160%;
 @compressed_text_flow_line_height: 130%;
