--- a/site/resources/styles/core/forms/form-core.less
+++ b/site/resources/styles/core/forms/form-core.less
@@ -1,5 +1,6 @@
 @import "../core-values";
 @import "../core-mixins";
+@import "form-values";
 
 .basic-form
 {
@@ -132,6 +133,21 @@
     {
       width: 25%;
     }
+  }
+
+  .browse
+  {
+    input
+    {
+      width: 200px;
+    }
+  }
+
+  .help
+  {
+    width: @label-area-width;
+    height: auto;
+    margin-right: @standard_spacing;
   }
 }
 
