--- a/site/resources/styles/core/forms/top-layout.less
+++ b/site/resources/styles/core/forms/top-layout.less
@@ -1,28 +1,7 @@
+@import "../core-values";
+
 .basic-form.top
 {
-  .two-inputs
-  {
-    input,
-    select,
-    textarea
-    {
-      width: 50%;
-    }
-  }
-
-  label:first-child
-  {
-    display: block;
-  }
-
-  .help
-  {
-    float: right;
-    width: 180px;
-    height: auto;
-    margin-right: 12px;
-  }
-
   fieldset
   {
     padding-right: 0px;
@@ -32,5 +11,29 @@
     {
       border-right-width: 0px;
     }
+  }
+
+  .form-row
+  {
+    .button:first-child
+    {
+      margin-left: -@standard_border_radius - @hairline_border_width;
+    }
+  }
+
+  label:first-child
+  {
+    display: block;
+    margin-bottom: @small_spacing;
+  }
+
+  .help
+  {
+    float: right;
+  }
+
+  .required label:after
+  {
+    content: '*';
   }
 }
